<resources>
    <string name="app_name">ToDoListASDE</string>
    <string name="title">ToDo List</string>
    <string name="add_task">Add a new task</string>
    <string name="priority">Priority</string>
    <string name="save">Save</string>
    <string name="task">Task...</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="delete">¿Do you really delete this task?</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="today">Today</string>
    <string name="completed">Completed</string>


</resources>